--- a/style.css
+++ b/style.css
@@ -3,5 +3,13 @@
     margin: 0;
 }
 body{
-    background-color: aqua;
+    background-color: #000;
+    color: #fff;
+}
+
+.container{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
